// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > rendering > matches the baseline markup snapshot 1`] = `
<div>
  <label
    class="form-check form-switch"
  >
    <span
      class="check-input"
    >
      <input
        aria-label="Notifications"
        class=""
        data-react-aria-pressable="true"
        role="switch"
        tabindex="0"
        type="checkbox"
      />
    </span>
  </label>
</div>
`;

exports[`Switch > styling props > applies color, size, invalid/valid classes together, as a radio-backed switch 1`] = `
<div>
  <label
    class="form-check form-switch large is-invalid is-valid bazinga"
  >
    <span
      class="check-input secondary is-invalid is-valid"
    >
      <input
        aria-invalid="true"
        class="is-invalid is-valid"
        id="2"
        role="switch"
        type="radio"
      />
    </span>
    Some label
  </label>
</div>
`;
